withALB/withFargate/kube-manifest/fargate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fargate-deployment
  namespace: fp-space
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: mohitknamdeo/mywebapp:4.0
          ports:
            - containerPort: 80
      resources:
        requests:
          memory: "256Mi"
          cpu: "500m"
        limits:
          memory: "500Mi"
          cpu: "1000m"
---
apiVersion:
kind:
metadata:
  name: fargate-nodeport-service
  namespace: fp-space
  labels:
    app: webapp
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
